@@ -27,12 +27,13 @@
     </modules>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <logback-classic.version>1.2.3</logback-classic.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+        <sonar.exclusions>**/ee/openeid/siga/webapp/json/*, **/ee/openeid/siga/client/**/*, **/ee/openeid/siga/service/signature/configuration/*</sonar.exclusions>
         <sonar.language>java</sonar.language>
     </properties>
     <dependencies>
@@ -69,16 +70,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
-                <configuration>
-                    <argLine>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
-                        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
-                        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
-                        --illegal-access=permit
-                        ${argLine}
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -86,7 +77,7 @@
                 <version>0.8.2</version>
                 <executions>
                     <execution>
-                        <id>jacoco-initialize</id>
+                        <id>jacoco-initializ</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -95,7 +86,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
